--- a/style.css
+++ b/style.css
@@ -1,1 +1,60 @@
+ .container-fluid {
+      padding-right: 0 !important;
+      padding-left: 0 !important;
+}
 
+h1 {
+      text-align: center;
+      background-color: #ccc;
+      padding: 20px 0 20px 0;
+      margin-top: 30px;
+}
+
+.content {
+      column-count: 3;
+      margin-top: 30px;
+      height: 100%;
+}
+
+input {
+      width: 100%;
+      display: block;
+      padding: 0.375rem 0.75rem;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #212529;
+      background-color: #fff;
+      background-clip: padding-box;
+      border: 1px solid #ced4da;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      border-radius: 0.25rem;
+      transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+      margin: 0 auto;
+}
+
+ul {
+      list-style: none;
+      flex-direction: column;
+      padding: 0;
+}
+
+@media (max-width: 1100px) {
+      .content {
+          column-count: 2;
+      }
+}
+
+@media (max-width: 600px) {
+      .content {
+          column-count: 1;
+      }
+}
+
+@media (max-width: 500px) {
+      h1 {
+          font-size: 16px;
+      }
+}
