--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ ul {
       padding: 0;
 }
 
+li {
+      margin: 5px 0 5px 0;
+}
+
+.img-size {
+      width: 70px;
+}
+
 @media (max-width: 1100px) {
       .content {
           column-count: 2;
