--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
       text-align: center;
       padding: 20px 0 20px 0;
       margin-top: 30px;
+      box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
 .content {
