--- a/style.css
+++ b/style.css
@@ -3,15 +3,18 @@
       padding-left: 0 !important;
 }
 
+header {
+  padding: 10px 0 10px 0;
+  box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
 .sticky {
     position: sticky;
     top: 0;
 }
 
 h2 {
-      text-align: center;
-      padding: 10px 0 10px 0;
-      box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
+      text-align: center;         
 }
 
 .content {
