--- a/style.css
+++ b/style.css
@@ -46,21 +46,29 @@ li {
       width: 70px;
 }
 
-@media (max-width: 1100px) {
-      .content {
+@media (max-width: 1399px) {
+      body {
+          font-size: 14px;
+      }
+}
+
+@media (max-width: 1199px) {
+     .content {
           column-count: 2;
+     }
+}
+
+@media (max-width: 992px) {
+      body {
+          font-size: 13px;
       }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
       .content {
+          display: flex; 
+          justify-content: center; 
           column-count: 1;
-      }
-}
-
-@media (max-width: 500px) {
-      h1 {
-          font-size: 16px;
       }
 }
 
@@ -69,4 +77,3 @@ li {
           font-size: 12px;
       }
 }
-
