--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
- .container-fluid {
+body {
+     font-family: 'Space Mono', monospace;
+}
+
+.container-fluid {
       padding-right: 0 !important;
       padding-left: 0 !important;
 }
