--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-     font-family: 'Space Mono', monospace !important;
+     font-family: 'League Gothic', sans-serif;
 }
 
 .container-fluid {
