--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-     font-family: 'League Gothic', sans-serif;
+     font-family: 'Montserrat', sans-serif !important;
 }
 
 .container-fluid {
