--- a/style.css
+++ b/style.css
@@ -58,16 +58,16 @@ li {
   text-align: center;
   cursor:pointer; 
   display:none;
-  width: 80px;
-  height: 30px;
+  /*width: 80px;
+  height: 30px;*/
   background: #c0c0c0;
   line-height: 30px;
   border-radius: 5px;
 }
 
-#go-top:hover {
-  background: #333;
-  color: #fff;
+img, svg {
+    vertical-align: middle;
+    width: 30px;
 }
 
 @media (max-width: 1399px) {
