--- a/style.css
+++ b/style.css
@@ -91,6 +91,10 @@ img, svg {
           justify-content: center; 
           column-count: 1;
       }
+     
+     #go-top {
+          right: 50px;
+     }
 }
 
 @media (max-width: 400px) {
