--- a/style.css
+++ b/style.css
@@ -50,21 +50,37 @@ li {
       width: 70px;
 }
 
-
-#go-top {
-  position: fixed; 
-  bottom: 25px; 
-  right: 70px;
-  text-align: center;
-  cursor:pointer; 
-  display:none;
-  background: #c0c0c0;
-  border-radius: 5px;
+#scroll {
+    position:fixed;
+    right:10px;
+    bottom:10px;
+    cursor:pointer;
+    width:50px;
+    height:50px;
+    background-color:#3498db;
+    text-indent:-9999px;
+    display:none;
+    -webkit-border-radius:60px;
+    -moz-border-radius:60px;
+    border-radius:60px
 }
 
-img, svg {
-    vertical-align: middle;
-    width: 35px;
+#scroll span {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:-8px;
+    margin-top:-12px;
+    height:0;
+    width:0;
+    border:8px solid transparent;
+    border-bottom-color:#ffffff;
+}
+
+#scroll:hover {
+    background-color:#e74c3c;
+    opacity:1;filter:"alpha(opacity=100)";
+    -ms-filter:"alpha(opacity=100)";
 }
 
 @media (max-width: 1399px) {
@@ -91,18 +107,10 @@ img, svg {
           justify-content: center; 
           column-count: 1;
       }
-     
-     #go-top {
-          right: 50px;
-     }
 }
 
 @media (max-width: 400px) {
       li {
           font-size: 12px;
       }
-     
-     #go-top {
-          right: 10px;
-     }
 }
