--- a/style.css
+++ b/style.css
@@ -50,33 +50,112 @@ li {
       width: 70px;
 }
 
-.scrollToTopBtn {
-  background-color: #ccc;
-  border: none;
-  color: white;
-  cursor: pointer;
-  font-size: 18px;
-  line-height: 48px;
-  width: 48px;
 
-  /* place it at the bottom right corner */
+.top-link {
+  transition: all .25s ease-in-out;
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  /* keep it at the top of everything else */
-  z-index: 100;
-  /* hide with opacity */
-  opacity: 0;
-  /* also add a translate effect */
-  transform: translateY(100px);
-  /* and a transition */
-  transition: all 0.5s ease;
+  bottom: 0;
+  right: 0;
+  display: inline-flex;
+  
+	cursor: pointer;
+	align-items: center;
+	justify-content: center;
+	margin: 0 3em 3em 0;
+	border-radius: 50%;
+	padding: .25em;
+	width: 80px;
+	height: 80px;
+  background-color: #F8F8F8;
+  
+  &.show {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  &.hide {
+    visibility: hidden;
+    opacity: 0;
+  }
+
+	svg {
+		fill: #000;
+		width: 24px;
+		height: 12px;
+	}
+
+	&:hover {
+		background-color: #E8E8E8;
+
+		svg {
+			fill: #000000;
+		}
+	}
 }
 
-.showBtn {
-  opacity: 1;
-  transform: translateY(0);
+.top-link {
+	 transition: all 0.25s ease-in-out;
+	 position: fixed;
+	 bottom: 0;
+	 right: 0;
+	 display: inline-flex;
+	 cursor: pointer;
+	 align-items: center;
+	 justify-content: center;
+	 margin: 0 3em 3em 0;
+	 border-radius: 50%;
+	 padding: 0.25em;
+	 width: 80px;
+	 height: 80px;
+	 background-color: #f8f8f8;
 }
+ .top-link.show {
+	 visibility: visible;
+	 opacity: 1;
+}
+ .top-link.hide {
+	 visibility: hidden;
+	 opacity: 0;
+}
+ .top-link svg {
+	 fill: #000;
+	 width: 24px;
+	 height: 12px;
+}
+ .top-link:hover {
+	 background-color: #e8e8e8;
+}
+ .top-link:hover svg {
+	 fill: #000;
+}
+ .screen-reader-text {
+	 position: absolute;
+	 clip-path: inset(50%);
+	 margin: -1px;
+	 border: 0;
+	 padding: 0;
+	 width: 1px;
+	 height: 1px;
+	 overflow: hidden;
+	 word-wrap: normal !important;
+	 clip: rect(1px, 1px, 1px, 1px);
+}
+ .screen-reader-text:focus {
+	 display: block;
+	 top: 5px;
+	 left: 5px;
+	 z-index: 100000;
+	 clip-path: none;
+	 background-color: #eee;
+	 padding: 15px 23px 14px;
+	 width: auto;
+	 height: auto;
+	 text-decoration: none;
+	 line-height: normal;
+	 color: #444;
+	 font-size: 1em;
+	 clip: auto !important;
+} 
 
 @media (max-width: 1399px) {
       body {
