--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ li {
   cursor: pointer;
 }
 
+.top-btn-img {
+  width: 15px;
+}
+
 @media (max-width: 1399px) {
       body {
           font-size: 14px;
