--- a/style.css
+++ b/style.css
@@ -6,6 +6,27 @@ body {
      font-family: 'Montserrat', sans-serif !important;
 }
 
+
+body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+	border-radius: 10px;
+	background-color: #CCCCCC;
+}
+
+body::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #D62929;
+	background-image: -webkit-linear-gradient(90deg, transparent, rgba(0, 0, 0, 0.4) 50%, transparent, transparent)
+}
+
 .container-fluid {
       padding-right: 0 !important;
       padding-left: 0 !important;
@@ -106,26 +127,3 @@ li {
     }
 }
 
--webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
-	border-radius: 10px;
-	background-color: #CCCCCC;
-}
-
--webkit-scrollbar
-{
-	width: 12px;
-	background-color: #F5F5F5;
-}
-
--webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	background-color: #D62929;
-	background-image: -webkit-linear-gradient(90deg,
-											  transparent,
-											  rgba(0, 0, 0, 0.4) 50%,
-											  transparent,
-											  transparent)
-}
