--- a/style.css
+++ b/style.css
@@ -47,6 +47,38 @@ h2 {
       text-align: center;         
 }
 
+.tracking-in-expand {
+	animation-iteration-count: 1;
+	-webkit-animation: tracking-in-expand 5.4s cubic-bezier(0.165, 0.840, 0.440, 1.000) both;
+	        animation: tracking-in-expand 5.4s cubic-bezier(0.165, 0.840, 0.440, 1.000) both;
+}
+
+@-webkit-keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .content {
       column-count: 3;
       margin-top: 30px;
