--- a/style.css
+++ b/style.css
@@ -43,6 +43,43 @@ header {
     z-index: 1;
 }
 
+.img-mvs {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    width: 100%;      
+}
+
+.img-mvs-anime {
+   width: 60px;
+   animation: waitAnimate 5s linear infinite;
+   transform-origin: 50% 50%;
+}
+
+        @keyframes waitAnimate {
+           0% {
+               transform: perspective(100px)rotate(0deg)
+           }
+           16.667% {
+                transform: perspective(100px)rotateX(180deg)rotateY(0);
+           }
+           33.333% {
+                transform: perspective(100px)rotateX(180deg)rotateY(180deg);
+           }
+           50% {
+                transform: perspective(100px)rotateX(0)rotateY(180deg);
+           }
+           66.667% {
+                transform: perspective(100px)rotateX(0)rotateY(0);
+           }
+           100% {
+                transform: perspective(100px)rotateX(0)rotateY(0);
+            }
+         }
+
+
 h2 {
       text-align: center;         
 }
