--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
     top: 0;
     z-index: 1;
 }
-
+/*
 .img-mvs {
     display: flex;
     flex-direction: row;
@@ -78,7 +78,7 @@ header {
 		transform: perspective(100px)rotateX(0)rotateY(0);
 	}
 }
-
+*/
 h2 {
       text-align: center;         
 }
