--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ html {
 }
 
 body {
-     font-family: 'Montserrat', sans-serif !important;
+     font-family: 'Montserrat', sans-serif !important;	
+     background-color: #0f1115 !important;
 }
 
 
