--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ header {
 }
 
 h2 {
-      text-align: center;         
+      text-align: center;
+      color: #dc3545;
 }
 
 .tracking-in-expand {
