--- a/style.css
+++ b/style.css
@@ -91,13 +91,9 @@ h2 {
       height: 100%;
 }
 
-input
-       margin: 10px 0 0 0;
-       width: 100%;
-}
-
-.input-search {
+input {
       display: block;
+      margin: 10px 0 0 0;
       width: 100%;
       padding: 0.375rem 0.75rem;
       font-size: 1rem;
@@ -114,7 +110,7 @@ input
       transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-.input-search:focus {
+input:focus {
       color: #212529;
       background-color: #fff;
       border-color: #86b7fe;
