--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ input {
       transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-input:focus {
+input:focus, input:active:focus {
       color: #212529;
       background-color: #fff;
       border-color: #86b7fe;
@@ -138,21 +138,45 @@ li {
 }
 
 .color-primary {
-	color: #0d6efd;
+      color: #0d6efd;
+}
+
+button {
+      display: inline-block;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #000;
+      text-align: center;
+      text-decoration: none;
+      vertical-align: middle;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+      background-color: #f8f9fa;
+      border: 1px solid #f8f9fa;
+      padding: 0.375rem 0.75rem;
+      font-size: 1rem;
+      border-radius: 0.25rem;
+      transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+button:focus, button:active:focus  {
+    box-shadow: 0 0 0 0.25rem rgb(211 212 213 / 50%);
 }
 
 .scrollToTopBtn {
-  position: fixed;
-  bottom: 50px;
-  right: 50px;
-  z-index: 100;
-  display: none;
-  padding: 8px 4px;
-  cursor: pointer;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    z-index: 100;
+    display: none;
+    padding: 8px 4px;
+    cursor: pointer;
 }
 
 .top-btn-img {
-  width: 15px;
+    width: 15px;
 }
 
 @media (max-width: 1399px) {
