--- a/style.css
+++ b/style.css
@@ -155,9 +155,9 @@ button {
       user-select: none;
       background-color: #f8f9fa;
       border: 1px solid #f8f9fa;
-      padding: 0.375rem 0.75rem;
+      padding: 0.375rem 0.75rem !important;
       font-size: 1rem;
-      border-radius: 0.25rem;
+      border-radius: 0.25rem !important;
       transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
