--- a/style.css
+++ b/style.css
@@ -17,30 +17,29 @@ body {
      background-color: #0f1115 !important;
 }
 
-
-body::-webkit-scrollbar-track
-{
+body::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 	border-radius: 10px;
 	background-color: #CCCCCC;
 }
 
-body::-webkit-scrollbar
-{
+body::-webkit-scrollbar {
 	width: 12px;
 	background-color: #F5F5F5;
 }
 
-body::-webkit-scrollbar-thumb
-{
+body::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 	background-color: #D62929;
 	background-image: -webkit-linear-gradient(90deg, transparent, rgba(0, 0, 0, 0.4) 50%, transparent, transparent)
 }
 
-.container-fluid {
-      padding-right: 0 !important;
-      padding-left: 0 !important;
+ol, ul {
+    list-style: auto;
+}
+
+.container {
+     
 }
 
 header {
