--- a/style.css
+++ b/style.css
@@ -35,15 +35,73 @@ body::-webkit-scrollbar-thumb {
 }
 
 ol, ul {
-    list-style: auto;
+        list-style: auto;
 }
 
 .container {
-     
+         width: 100%;
+         padding-right: var(--bs-gutter-x, .75rem);
+         padding-left: var(--bs-gutter-x, .75rem);
+         margin-right: auto;
+         margin-left: auto
 }
 
+@media (min-width:576px) {
+        .container {
+             max-width: 540px
+        }
+}
+
+@media (min-width:768px) {
+         .container {
+             max-width: 720px
+         }
+ }
+
+@media (min-width:992px) {
+
+         .container {
+             max-width: 960px
+        }
+}
+
+@media (min-width:1200px) {
+        .container {
+             max-width: 1140px
+        }
+}
+
+@media (min-width:1400px) {
+        .container {
+             max-width: 1320px
+       }
+}
+
+.row {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(var(--bs-gutter-y) * -1);
+    margin-right: calc(var(--bs-gutter-x) * -.5);
+    margin-left: calc(var(--bs-gutter-x) * -.5)
+}
+
+.row>* {
+     flex-shrink: 0;
+     width: 100%;
+     max-width: 100%;
+     padding-right: calc(var(--bs-gutter-x) * .5);
+     padding-left: calc(var(--bs-gutter-x) * .5);
+     margin-top: var(--bs-gutter-y)
+}
+
+.col {
+     flex: 1 0 0%
+ }
+
 header {
-  padding: 10px 0 10px 0;
+     padding: 10px 0 10px 0;
 }
 
 .sticky {
