--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+@font-face {
+    font-family: Montserrat Regular; 
+    src: url('../fonts/Montserrat-Regular.ttf');
+}
+
 * {
     box-sizing: border-box;
 }
@@ -13,7 +18,7 @@ body {
      font-size: 1rem;
      font-weight: 400;
      line-height: 1.5;
-     font-family: 'Montserrat', sans-serif !important;	
+     font-family: Montserrat Regular, sans-serif !important;	
      background-color: #0f1115 !important;
 }
 
