--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 @font-face {
-    font-family: Montserrat Regular; 
+    font-family: Montserrat; 
     src: url('../fonts/Montserrat-Regular.ttf');
 }
 
@@ -18,7 +18,7 @@ body {
      font-size: 1rem;
      font-weight: 400;
      line-height: 1.5;
-     font-family: Montserrat Regular, sans-serif !important;	
+     font-family: Montserrat, sans-serif !important;	
      background-color: #0f1115 !important;
 }
 
