--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@
 
 @font-face {
     font-family: Montserrat; 
-    src: url('../fonts/Montserrat-Regular.ttf') format('ttf');
-    font-display: swap;
+    src: url('../fonts/Montserrat-Regular.ttf');
 }
 
 * {
