--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,10 @@ li {
       margin-right: 5px;
 }
 
+.img-size:hover {
+      box-shadow: 0px 0px 4px 0px rgba(220, 53, 69);	
+}
+
 .color-primary {
       color: #0d6efd;
 }
