--- a/css/style.css
+++ b/css/style.css
@@ -123,8 +123,7 @@ header {
 h2 {
       text-align: center;
       color: #dc3545;
-      margin-top: 0;
-      margin-bottom: .5rem;
+      margin: 0;
       font-weight: 500;
       line-height: 1.2;
       font-size: calc(1.325rem + .9vw);
