--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,10 @@ li {
       color: #0d6efd;
 }
 
+.color-primary:hover {
+      border-bottom: 1px solid #0d6efd;
+}
+
 button {
       display: inline-block;
       font-weight: 400;
