--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,11 @@ h2 {
       height: 100%;
 }
 
+fieldset {
+      border: 1px solid #fff;
+      border-radius: 5px;
+}
+
 input {
       display: block;
       margin: 10px 0 0 0;
