--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ img, svg {
  }
 
 header {
-     padding: 10px 0 20px 0;
+     padding: 10px 0 10px 0;
 }
 
 .sticky {
@@ -180,7 +180,7 @@ fieldset {
 
 input {
       display: block;
-      margin: 10px 0 0 0;
+      margin: 10px 0 10px 0;
       width: 100%;
       padding: 0.375rem 0.75rem;
       font-size: 1rem;
