--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,18 @@ li {
 
 .color-primary:hover {
       border-bottom: 1px solid #0d6efd;
+      animation-iteration-count: 1;
+      animation-name: numberOpacity;
+      animation-duration: 500ms;
+}
+
+@keyframes numberOpacity {
+  from {
+	   opacity: 0; 
+	}
+  to {
+	   opacity: 1; 
+	}
 }
 
 button {
