--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ img, svg {
          padding-left: .75rem;
          margin-right: auto;
          margin-left: auto;
+	 margin-bottom: 50px;
 }
 
 @media (min-width:576px) {
