--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-     margin: 0;
+     margin: 0 0 50px 0;
      font-size: 1rem;
      font-weight: 400;
      line-height: 1.5;
@@ -53,7 +53,6 @@ img, svg {
          padding-left: .75rem;
          margin-right: auto;
          margin-left: auto;
-	 margin-bottom: 50px;
 }
 
 @media (min-width:576px) {
