--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,10 @@ fieldset {
       border-radius: 5px;
 }
 
+small {
+      color: #6c757d;
+}
+
 input {
       display: block;
       margin: 10px 0 10px 0;
