--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ small {
 
 .span-small {
 	animation-name: changeColor;
+	animation-iteration-count: infinite;
 	animation-delay: 0.1s;
 	animation-duration: 3s; 
 }
