--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body::-webkit-scrollbar-thumb {
 marquee {
 	color: #dc3545;
 }
-*/
+
 .start-print {
         display: block;
         color:#dc3545; 
@@ -47,6 +47,7 @@ marquee {
         font-weight: bold;
         text-align: center;
 }
+*/
 
 ol, ul {
         list-style: auto;
@@ -132,7 +133,7 @@ header {
 h2 {
       text-align: center;
       color: #dc3545;
-      margin: 0;
+      margin: 20px 0 0 0;
       font-weight: 500;
       line-height: 1.2;
       font-size: calc(1.325rem + .9vw);
