--- a/css/style.css
+++ b/css/style.css
@@ -269,11 +269,13 @@ li span a:hover {
 
 .color-primary {
       color: #0d6efd;
+      box-shadow: inset 0 0 #0d6efd;
+      transition: box-shadow .3s, color .3s;
 }
 
 .color-primary:hover {
-      transition-duration: 1s;
-      border-bottom: 1px solid #0d6efd;   
+      color: #ffffff;
+      box-shadow: inset 100px 0 #0d6efd;  
 }
 
 button {
