--- a/css/style.css
+++ b/css/style.css
@@ -246,11 +246,13 @@ li {
 li span a {
       color: #888888; 
       text-decoration: none;
+      box-shadow: inset 0 0 #888888; 
+      transition: box-shadow .3s, color .3s;
 }
 
 li span a:hover { 
-      transition-duration: 1s;
-      border-bottom: 1px solid #888888;
+      color: #ffffff;
+      box-shadow: inset 100px 0 #888888;
 }
 
 .size-id {
