--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,10 @@ h2 {
       height: 100%;
 }
 
+.height-content {
+      min-height: calc(100vh - 275px);
+}
+
 fieldset {
       border: 1px solid #6c757d;
       border-radius: 5px;
