--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ h2 {
 }
 
 .height-content {
-      min-height: calc(100vh - 275px);
+     /* min-height: calc(100vh - 275px);*/
 }
 
 fieldset {
