--- a/css/style.css
+++ b/css/style.css
@@ -319,11 +319,20 @@ footer {
 
 .scrollToTopBtn {
     position: fixed;
-    bottom: 30px;
+    bottom: 80px;
     right: 30px;
     z-index: 100;
     display: none;
     padding: 8px 4px;
+    cursor: pointer;
+}
+
+.messenger-links img {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    max-width: 40px;
+    transition: all 0.3s;
     cursor: pointer;
 }
 
