--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,10 @@ footer {
     cursor: pointer;
 }
 
+.messenger-links img:hover {
+  transform: scale(1.1);
+}
+
 .top-btn-img {
     width: 15px;
 }
