--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ body {
      background-size: cover;
 }
 
+.light-theme {
+     background-image: linear-gradient(to top, rgba(255, 255, 255, 0.082), rgba(255, 255, 255, 0.521)),url(./PoliceCar.webp);
+}
+
 body::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 	border-radius: 10px;
