--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,15 @@ body {
      background-image: linear-gradient(to top, rgba(255, 255, 255, 0.082), rgba(255, 255, 255, 0.521)),url(./images/PoliceCar.webp);
 }
 
+.btn-toggle::after {
+     content: url(./images/nightlight_round_black.svg);
+     fill: #eee;
+}
+
+.light-theme .btn-toggle::after {
+      content: url(./images/wb_sunny_black.svg);   
+ }
+
 body::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 	border-radius: 10px;
