--- a/css/style.css
+++ b/css/style.css
@@ -20,19 +20,6 @@ body {
      background-size: cover;
 }
 
-.light-theme {
-     background-image: linear-gradient(to top, rgba(255, 255, 255, 0.082), rgba(255, 255, 255, 0.521)),url(./images/PoliceCar.webp) !important;
-}
-
-.btn-toggle::after {
-     content: url(./images/nightlight_round_black.svg);
-     fill: #eee;
-}
-
-.light-theme .btn-toggle::after {
-      content: url(./images/wb_sunny_black.svg);   
- }
-
 body::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 	border-radius: 10px;
@@ -135,13 +122,11 @@ header {
     position: sticky;
     top: 0;
     z-index: 1;
-    /*background-color: #0f1115 !important;*/
     background-color:  rgba(15, 17, 21, 0.9);
 }
 
 h2 {
       text-align: center;
-      /*color: #dc3545;*/
       color: rgb(220, 36, 48);
       margin: 20px 0 0 0;
       font-weight: 500;
@@ -332,7 +317,7 @@ footer {
 
 .scrollToTopBtn {
     position: fixed;
-    bottom: 105px;
+    bottom: 164px;
     right: 37px;
     z-index: 100;
     display: none;
@@ -363,6 +348,80 @@ footer {
     width: 15px;
 }
 
+/* Light theme styles */
+.btn-toggle {
+      position: fixed;
+      bottom: 104px;
+      right: 37px;
+      max-width: 55px;
+      transition: transform .8s ease-in-out;
+      cursor: pointer;
+      background-color: rgba(15, 17, 21, 0.9);
+      height: 40px;
+      width: 40px;
+      border: 1px solid white;
+}
+
+.light-theme {
+      background-image: linear-gradient(to top, rgba(221, 221, 221, 0.795), rgba(189, 180, 180, 0.76)),url(../images/PoliceCar.webp);
+}
+
+.light-theme li {
+      color: black;
+      font-weight: 600;
+}
+
+.light-theme .sticky {
+      background-color: rgba(255, 255, 255, 0.658);
+}
+
+.light-theme fieldset {
+      border: 1px solid black;
+      border-radius: 5px;
+}
+
+.light-theme small {
+      color: black;
+  }
+
+.light-theme footer {
+      color: black;
+      font-weight: 600;
+}
+
+.light-theme li span a {
+      color: black;
+      font-weight: 600;
+}
+
+.light-theme li span a:hover { 
+      box-shadow: inset 200px 0 yellow;  
+}
+
+.light-theme .color-primary {
+      text-shadow: #000 1px 1px 0px;
+}
+
+.light-theme .color-primary:hover{
+      text-shadow: none;
+}
+
+.light-theme .btn-toggle {
+      background-color: #fff;
+}
+ 
+.btn-toggle::after {   
+      content: url(../images/theme-dark.svg); 
+      
+ 
+}
+ 
+.light-theme .btn-toggle::after {
+      content: url(../images/theme-light.svg);
+ 
+}
+/*  //Light theme styles */
+
 @media (max-width: 1399px) {
       body {
           font-size: 14px;
@@ -381,6 +440,10 @@ footer {
       body {
           font-size: 13px;
       }
+
+      .light-theme {
+            background-image: linear-gradient(to top, rgba(255, 255, 255, 0.082), rgba(255, 255, 255, 0.521)),url(../images/PoliceCarTablet.webp);
+      }
 }
 
 @media (max-width: 400px) {
@@ -398,6 +461,10 @@ footer {
    
     small {
 	 font-size: 10px;    
+    }
+
+    .light-theme {
+      background-image: linear-gradient(to top, rgba(255, 255, 255, 0.082), rgba(255, 255, 255, 0.521)),url(../images/PoliceCarMobile.webp);
     }
 }
 
