--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,7 @@ footer {
     }
 
     .light-theme {
-      background-image: linear-gradient(to top, rgba(255, 255, 255, 0.082), rgba(255, 255, 255, 0.521)),url(../images/PoliceCarMobile.webp);
+      background-image: linear-gradient(to top, rgba(255, 255, 255, 0.082), rgba(255, 255, 255, 0.521)),url(../images/Ford-Police-Car.webp);
     }
 }
 
