--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,15 @@ footer {
     -webkit-filter: opacity(80%);
 }
 
+.myrotvorets-links {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    max-width: 55px;
+    transition: transform .8s ease-in-out;
+    cursor: pointer;
+}
+
 .top-btn-img {
     width: 15px;
 }
