--- a/css/style.css
+++ b/css/style.css
@@ -477,6 +477,10 @@ footer {
           right: 15px;	    
     }
    
+    .myrotvorets-links img {
+	  right: 15px;	   
+    }
+	
     small {
 	 font-size: 10px;    
     }
