--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ footer {
 
 .scrollToTopBtn {
     position: fixed;
-    bottom: 234px;
+    bottom: 174px;
     right: 37px;
     display: none;
     padding: 8px 4px;
@@ -364,7 +364,8 @@ footer {
 /* Light theme styles */
 .btn-toggle {
       position: fixed;
-      bottom: 174px;
+      top: 25px;
+      z-index: 2;
       right: 37px;
       max-width: 55px;
       transition: transform .8s ease-in-out;
