--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ footer {
 
 @media (max-height: 390px) {
     .scrollToTopBtn {
-	 bottom: 30px;    
+	 display: none !important;    
     }
 }
 
