--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,7 @@ footer {
       border-top: 1px solid #6c757d; 
       margin-top: 10px;
       color: #6c757d; 
+      text-align: center;
 }
 
 .scrollToTopBtn {
