--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ ol, ul {
         list-style: auto;
 	/* new style*/
 	display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         flex-wrap: wrap;
 }
 
