--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,11 @@ li span a {
       transition: box-shadow .3s, color .3s;
 }
 
+li span a::selection {
+      color: #000;
+      box-shadow: inset 0 0 #dc2430;
+}
+
 li span a:hover { 
       color: #ffffff;
       box-shadow: inset 200px 0 #888888;
