--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ body {
      background-size: cover;
 }
 
+body::selection {
+      color: #ffffff;
+      background-color: #ff00ff;
+      text-shadow: 0 0 1px #000000;
+}
 body::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 	border-radius: 10px;
@@ -257,11 +262,6 @@ li span a {
       transition: box-shadow .3s, color .3s;
 }
 
-li span a::selection {
-      color: white;
-      background-color: #ee82ee;
-}
-
 li span a:hover { 
       color: #ffffff;
       box-shadow: inset 200px 0 #888888;
@@ -295,11 +295,6 @@ li span a:hover {
 .color-primary:hover {
       color: #ffffff;
       box-shadow: inset 100px 0 #0d6efd;  
-}
-
-.color-primary::selection {
-      color: white;
-      background-color: #ee82ee;
 }
 
 button {
