--- a/css/style.css
+++ b/css/style.css
@@ -171,12 +171,6 @@ h2 {
       font-size: 11px;
 }
 
-.content::selection {
-      color: #ffffff;
-      background-color: #ff00ff;
-      text-shadow: 0 1px 1px #000000;
-}
-
 .height-content {
      min-height: calc(100vh - 275px);
 }
@@ -254,6 +248,12 @@ li {
     width: 240px;
     border: 1px solid #262626;
     border-radius: 4px;
+}
+
+li::selection {
+      color: #ffffff;
+      background-color: #ff00ff;
+      text-shadow: 0 1px 1px #000000;
 }
 
 li span a {
