--- a/css/style.css
+++ b/css/style.css
@@ -471,6 +471,14 @@ footer {
 }
 /*  //Light theme styles */
 
+/* Error style string */
+.mark-error {
+     padding: '10px';
+     width: 100%;
+     text-align: center;
+     font-family: monospace;
+     font-size: 16px;
+}
 
 /* Media query */
 @media (max-width: 1399px) {
